--- a/login.html
+++ b/login.html
@@ -64,7 +64,7 @@
                   </div>
                 </form>
                 <div class="text-center">
-                  <button type="submit" class="btn btn-success">Anmelden</button>
+                  <button type="submit" class="btn btn-success" onclick="postLogin()">Anmelden</button>
                     <div class="mt-2 mb-2">
                         <a href="loginVergessen.html" id="link-style" class="d-block mit-blue">Passwort vergessen?</a>
                     </div>
