--- a/login.html
+++ b/login.html
@@ -64,18 +64,20 @@
                   </div>
                 </form>
                 <div class="text-center">
-                  <button type="submit" class="btn btn-success">Anmelden</button>
-                    <div class="mt-2 mb-3">
+              
                   <button type="submit" class="btn btn-success" onclick="getTest()">Anmelden</button>
                     <div class="mt-2 mb-2">
                         <a href="loginVergessen.html" id="link-style" class="d-block mit-blue">Passwort vergessen?</a>
                     </div>
                 </div>
               </div>
+              <div class="card-footer text-center">
+                <button type="button" class="btn btn-primary mit-btn" id="buttonNeuerAccount">Neuen Account erstellen</button>
+              </div>
             </div>
           </div>
         </div>
-      </div>  
+      </div>   
     </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
   <script src="login.js"></script>
