--- a/Admin/Nutzerverwaltung/nutzerverwaltungalle.html
+++ b/Admin/Nutzerverwaltung/nutzerverwaltungalle.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="Bilder/ZwingenbergWappen.png">
+    <link rel="icon" type="image/png" href="../../Bilder/ZwingenbergWappen.png">
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../../main.css">
     <link rel="stylesheet" href="nutzerverwaltung.css">
     <title>Meine Veranstaltungen</title>
 </head>
 <body>
   <div class="jumbotron mit-lightblue text-center headpad position-relative">
-    <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco"href="veranstaltungen.html">Logout <img src="Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
-    <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
+    <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco"href="../../Nichteingeloggt/veranstaltungen.html">Logout <img src="../../Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
+    <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="../../Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
   </div>
 
   <nav class="navbar navbar-expand-sm navbar-light py-sm-1">
@@ -26,22 +26,21 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav w-100 justify-content-between">
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link " aria-current="page" href="veranstaltungen.html"><h6>Veranstaltungen</h6></a>
+            <a class="nav-link " aria-current="page" href="../veranstaltungen.html"><h6>Veranstaltungen</h6></a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
             <a class="nav-link mit-active" href="nutzerverwaltung.html"><h6>Nutzerverwaltung</h6></a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link" href="einstellungen.html"><h6>Einstellungen</h6></a>
+            <a class="nav-link" href="../einstellungen.html"><h6>Einstellungen</h6></a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link" href="impressum.html"><h6>Impressum</h6></a>
+            <a class="nav-link" href="../impressum.html"><h6>Impressum</h6></a>
           </div>
         </div>
       </div>
     </div>
   </nav>
-    
     <!--Inhalt-->
     <div class="row">
         <div class="col-sm-3" id="seitlicheNavbar">
@@ -49,7 +48,7 @@
                 <div class="container-fluid">
                   <ul class="navbar-nav">
                         <li class="nav-item">
-                        <a class="nav-link" href="nutzerverwaltungalle.html"><h7>Alle freigegebene Nutzer</h7></a>
+                        <a class="nav-link active" aria-current="page" href="nutzerverwaltungalle.html"><h7>Alle freigegebene Nutzer</h7></a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link" href="nutzerverwaltungfreieOrg.html"><h7>freigegebene Organisationen</h7></a>
@@ -58,7 +57,7 @@
                         <a class="nav-link" href="nutzerverwaltungnichtfreieOrg.html"><h7>nicht freigegebene Organisationen</h7></a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="nutzerverwaltungadmin.html"><h7>Admins</h7></a>
+                        <a class="nav-link" href="nutzerverwaltungadmin.html"><h7>Admins</h7></a>
                         </li>
                   </ul>
                 </div>
@@ -74,7 +73,7 @@
                             <table style="height: 100%;">
                                 <tbody>
                                   <tr>
-                                    <td class="align-middle"><h3>Admin</h3></td>
+                                    <td class="align-middle"><h3>Nutzer</h3></td>
                                   </tr>
                                 </tbody>
                               </table>
