--- a/Nichteingeloggt/einstellungennichteingeloggt.html
+++ b/Nichteingeloggt/einstellungennichteingeloggt.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="Bilder/ZwingenbergWappen.png">
+  <link rel="icon" type="image/png" href="../Bilder/ZwingenbergWappen.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="../main.css">
   <link rel="stylesheet" href="einstellungennichteingeloggt.css">
 
   <title>Einstellungen</title>
@@ -15,9 +15,9 @@
 
 <body>
   <div class="jumbotron mit-lightblue text-center headpad position-relative">
-    <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco" href="login.html">Login <img
-        src="Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
-    <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png"
+    <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco" href="../Login/login.html">Login <img
+        src="../Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
+    <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="../Bilder/ZwingenbergWappen.png"
         alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
   </div>
 
@@ -42,7 +42,7 @@
             </a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link mit-active" href="einstellungen.html">
+            <a class="nav-link mit-active" href="einstellungennichteingeloggt.html">
               <h6>Einstellungen</h6>
             </a>
           </div>
@@ -62,7 +62,7 @@
     Um Ihre Einstellungen einsehen zu können müssen Sie sich einloggen.
   </h1>
   <div class="d-grid">
-    <a href="login.html" class="btn btn-lg btn-block" id="loginlink">Login</a>
+    <a href="../Login/login.html" class="btn btn-lg btn-block" id="loginlink">Login</a>
   </div>
 
   
