--- a/Nutzer/impressum.html
+++ b/Nutzer/impressum.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="Bilder/ZwingenbergWappen.png">
+    <link rel="icon" type="image/png" href="../Bilder/ZwingenbergWappen.png">
     <title>Impressum</title>
     <!-- Bootstrap CSS --> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body>
     <div class="jumbotron mit-lightblue text-center headpad position-relative">
-        <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco"href="login.html">Login <img src="Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
-        <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
+        <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco"href="../login.html">Login <img src="../Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
+        <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="../Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
     </div>
     <nav class="navbar navbar-expand-sm navbar-light py-sm-1">
       <div class="container-fluid">
