--- a/Nutzer/Veranstaltungen/veranstaltugnen.html
+++ b/Nutzer/Veranstaltungen/veranstaltugnen.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet">
   <link rel="stylesheet" href="../../main.css">
+  <link rel="stylesheet" href="veranstaltungenNutzer.css">
 
 
   <title>Meine Veranstaltungen</title>
@@ -58,10 +59,16 @@
 
 
   <!--Inhalt-->
+  <div class="container">
+    <div class="row" id="veranstaltungsgruppen">
+        <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
+    </div>
+</div>
   
   <!--Inhalt Ende-->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+  <script src="veranstaltungenNutzer.js"></script>
   
 </body>
 
