--- a/Nutzer/Einstellungen/einstellungen.html
+++ b/Nutzer/Einstellungen/einstellungen.html
@@ -105,7 +105,7 @@
                 <input type="password" id="lpasswort" name="lpasswort" class="form-control custom-half-width"
                   placeholder="Passwort">
               </div>
-              <button id="buttonAccountLoeschen" type="button" class="btn btn-danger">Account unwiderruflich
+              <button id="buttonAccountLoeschen" type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Account unwiderruflich
                 löschen</button>
             </form>
           </div>
@@ -113,6 +113,25 @@
       </div>
     </div>
   </div>
+
+  <!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title fs-5" id="staticBackdropLabel">Bestätigung</h3>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Wollen Sie Ihren Account wirklich löschen?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zurück</button>
+        <button type="button" class="btn btn-danger">Account löschen</button>
+      </div>
+    </div>
+  </div>
+</div>
   <!--Inhalt Ende-->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
