--- a/Nutzer/Einstellungen/einstellungenAllgInfoBearbeiten.html
+++ b/Nutzer/Einstellungen/einstellungenAllgInfoBearbeiten.html
@@ -104,7 +104,7 @@
                 <button type="button" class="btn btn-secondary" id="buttonzurückInformationenÄndern">Zurück</button>
               </div>
               <div class="col-6 text-end">
-                <button type="submit" class="btn" id="buttonspeichern">Änderungen speichern</button>
+                <button type="submit" class="btn" id="buttonspeichern" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Änderungen speichern</button>
               </div>
             </div>
           </div>
@@ -112,6 +112,25 @@
       </div>
     </div>
   </div>
+
+  <!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title fs-5" id="staticBackdropLabel">Informationen ändern</h3>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Wollen Sie Ihre Informationen wirklich ändern?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zurück</button>
+        <button type="button" class="btn btn-primary">Änderungen speichern</button>
+      </div>
+    </div>
+  </div>
+</div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
   <script src="einstellungenAllgInfo.js"></script>
