--- a/Login/login.html
+++ b/Login/login.html
@@ -65,7 +65,7 @@
                 </form>
                 <div class="text-center">
               
-                  <button type="submit" class="btn btn-success" onclick="getTest()">Anmelden</button>
+                  <button type="submit" class="btn btn-success" onclick="postLogin()">Anmelden</button>
                     <div class="mt-2 mb-2">
                         <a href="loginVergessen.html" id="link-style" class="d-block mit-blue">Passwort vergessen?</a>
                     </div>
