--- a/Login/login.html
+++ b/Login/login.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Veranstaltungen Zwingenberg</title>
-    <link rel="icon" type="image/png" href="../Bilder/ZwingenbergWappen.png">
+    <link rel="icon" type="image/png" href="../../../../../../Frontend_Integrationsseminar/Bilder/ZwingenbergWappen.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../main.css">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../../../../../../Frontend_Integrationsseminar/main.css">
+    <link rel="stylesheet" href="../../../../../../Frontend_Integrationsseminar/Login/login.css">
 </head>
   <body>
     <div class="jumbotron mit-lightblue text-center headpad position-relative">
-        <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco"href="login.html">Login <img src="../Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
-        <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="../Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
+        <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco"href="login.html">Login <img src="../../../../../../Frontend_Integrationsseminar/Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
+        <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="../../../../../../Frontend_Integrationsseminar/Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
     </div>
 <!-- Ab hier ist die Navbar -->
     <nav class="navbar navbar-expand-sm navbar-light py-sm-1">
@@ -25,16 +25,16 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav w-100 justify-content-between">
             <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-              <a class="nav-link " aria-current="page" href="../Nichteingeloggt/veranstaltungen.html"><h6>Veranstaltungen</h6></a>
+              <a class="nav-link " aria-current="page" href="../../../../../../Frontend_Integrationsseminar/Nichteingeloggt/veranstaltungen.html"><h6>Veranstaltungen</h6></a>
             </div>
             <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-              <a class="nav-link" href="../Nichteingeloggt/meineVeranstaltungen.html"><h6>Meine Veranstaltungen</h6></a>
+              <a class="nav-link" href="../../../../../../Frontend_Integrationsseminar/Nichteingeloggt/meineVeranstaltungen.html"><h6>Meine Veranstaltungen</h6></a>
             </div>
             <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-              <a class="nav-link" href="../Nichteingeloggt/einstellungennichteingeloggt.html"><h6>Einstellungen</h6></a>
+              <a class="nav-link" href="../../../../../../Frontend_Integrationsseminar/Nichteingeloggt/einstellungennichteingeloggt.html"><h6>Einstellungen</h6></a>
             </div>
             <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-              <a class="nav-link" href="../Nichteingeloggt/impressum.html"><h6>Impressum</h6></a>
+              <a class="nav-link" href="../../../../../../Frontend_Integrationsseminar/Nichteingeloggt/impressum.html"><h6>Impressum</h6></a>
             </div>
           </div>
         </div>
@@ -67,21 +67,27 @@
               
                   <button type="submit" class="btn btn-success" onclick="postLogin()">Anmelden</button>
                     <div class="mt-2 mb-2">
-                        <a href="loginVergessen.html" id="link-style" class="d-block mit-blue">Passwort vergessen?</a>
+                        <a href="../../../../../../Frontend_Integrationsseminar/Login/loginVergessen.html" id="link-style" class="d-block mit-blue">Passwort vergessen?</a>
                     </div>
                 </div>
               </div>
               <div class="card-footer text-center">
-                <button type="button" class="btn btn-primary mit-btn" id="buttonNeuerAccount">Neuen Account erstellen</button>
+                <button type="button" class="btn btn-primary mit-btn" id="buttonNeuerAccount" onclick="fetchAllVeranstaltungsgruppen()">Neuen Account erstellen</button>
               </div>
             </div>
           </div>
         </div>
       </div>   
     </div>
+
+    <div class="container">
+      <div class="row" id="veranstaltungsgruppen">
+          <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
+      </div>
+  </div>
     
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-  <script src="login.js"></script>
+  <script src="../../../../../../Frontend_Integrationsseminar/Login/login.js"></script>
   </body>
   
 </html>
