--- a/Nutzer/Veranstaltungen/veranstaltungen.html
+++ b/Nutzer/Veranstaltungen/veranstaltungen.html
@@ -67,7 +67,7 @@
   </div>
   </div>
 
-  <div id="veranstaltungen-container" > <!--style="display: none;"-->
+  <div id="veranstaltungen-container" style="display: none;">
     <!-- Hier werden Veranstaltungen angezeigt -->
     <div class="container">
       <div class="row" id="veranstaltungsgruppenDetails">
