--- a/Nutzer/Einstellungen/einstellungenPasswortAendern.html
+++ b/Nutzer/Einstellungen/einstellungenPasswortAendern.html
@@ -68,6 +68,14 @@
                   </div>
                   
             </form>
+            <div id="successMessage" class="alert alert-success" style="display: none">
+              Passwort erfolgreich geändert!
+          </div>
+  
+          <!-- Error message div (add this immediately after the form) -->
+          <div id="errorMessage" class="alert alert-danger" style="display: none">
+              Fehler bei der Passwortänderung.
+          </div>
           </div>
           <div class="card-footer">
             <div class="row justify-content-between">
