--- a/Login/loginErstellen.html
+++ b/Login/loginErstellen.html
@@ -49,13 +49,14 @@
                   <div class="card-body">   
                     <div class="mb-3 d-flex justify-content-around align-items-center">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="privatRadio" value="Privatperson" checked onchange="toggleForm('privatForm')">
+                            <input class="form-check-input" type="radio" name="privatOrga" id="privatRadio" value="Privatperson" checked onchange="toggleForm('privatForm')">
                             <label class="form-check-label" for="privatRadio">Privatperson</label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="orgaRadio" value="Organisation" onchange="toggleForm('orgaForm')">
+                            <input class="form-check-input" type="radio" name="privatOrga" id="orgaRadio" value="Organisation" onchange="toggleForm('orgaForm')">
                             <label class="form-check-label" for="orgaRadio">Organisation/Verein</label>
                         </div>
+                        
                     </div>
 
                     <!-- Hier ist die Form für Privatpersonen -->
@@ -228,7 +229,7 @@
                           <button type="button" class="btn btn-secondary" id="buttonzurückLogin">Zurück</button>
                         </div>
                         <div class="col-6 text-end">
-                            <button type="button" class="btn btn-primary">Registrieren</button>
+                            <button type="button" class="btn btn-primary" onclick="chooseRegister()">Registrieren</button>
                         </div>
                     </div>
                   </div>
