--- a/Nichteingeloggt/veranstaltungen.html
+++ b/Nichteingeloggt/veranstaltungen.html
@@ -57,11 +57,27 @@
   </nav>
 
     <!--Veranstaltungsgruppen Liste-->
-      <div id="VeranstaltungsgruppenListe">
-          <p>Hier würde der Inhalt stehen</p>
+        <!--Inhalt-->
+  <div id="veranstaltungsgruppen-container">
+    <div class="container">
+      <div class="row" id="veranstaltungsgruppen">
+          <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
       </div>
+  </div>
+  </div>
+
+  <div id="veranstaltungen-container" style="display: none;">
+    <!-- Hier werden Veranstaltungen angezeigt -->
+    <div class="container">
+      <div class="row" id="veranstaltungsgruppenDetails">
+          <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
+      </div>
+    </div>
+  </div>
+
     <!--Ende Veranstaltungsgruppen Liste-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+    <script src="veranstaltungen.js"></script>
   </body>
 </html>
