--- a/Nutzer/Veranstaltungen/veranstaltungen.html
+++ b/Nutzer/Veranstaltungen/veranstaltungen.html
@@ -76,6 +76,15 @@
     </div>
   </div>
 
+  <div id="veranstaltungeneinzel-container" style="display: none;">
+    <!-- Hier werden Veranstaltungen angezeigt -->
+    <div class="container">
+      <div class="row" id="veranstaltungsgruppenDetailsVeranstaltung">
+          <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
+      </div>
+    </div>
+  </div>
+
 
   
   <!--Inhalt Ende-->
