--- a/Nutzer/impressum.html
+++ b/Nutzer/impressum.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="jumbotron mit-lightblue text-center headpad position-relative">
-      <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco" href="#" onclick="postLogout()">Logout <img src="../../Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
+      <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco" href="#" onclick="postLogout()">Logout <img src="../Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
         <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="../Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
     </div>
     <nav class="navbar navbar-expand-sm navbar-light py-sm-1">
